{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 277,
  "lineage": "e0f9e8b6-1fd8-478f-96e5-88d228ef993a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b68d38542135abb",
            "arn": "arn:aws:ec2:us-east-2:535228728975:instance/i-0f9a31d4024a9b8c9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdf",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-03526eb148f20d9cb",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9a31d4024a9b8c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TFKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ea72b945748ecbfb",
            "private_dns": "ip-192-168-100-214.us-east-2.compute.internal",
            "private_ip": "192.168.100.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-084857a53a2453c8f",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e67be145e2a5a4a7",
            "tags": {
              "Name": "tf_ec2_instance"
            },
            "tags_all": {
              "Name": "tf_ec2_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05bd8d00cf2960070"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.tf_sg",
            "aws_subnet.privatesubnet",
            "aws_vpc.terraform-vpc",
            "data.aws_ami.AmazonLinux",
            "tls_private_key.new_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:535228728975:internet-gateway/igw-0e81c1b4f136d1dd1",
            "id": "igw-0e81c1b4f136d1dd1",
            "owner_id": "535228728975",
            "tags": {
              "Name": "tf_igw"
            },
            "tags_all": {
              "Name": "tf_igw"
            },
            "vpc_id": "vpc-0f6d4c225868cf1c0"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraformRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:535228728975:route-table/rtb-05dc301f5d4ad5911",
            "id": "rtb-05dc301f5d4ad5911",
            "owner_id": "535228728975",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e81c1b4f136d1dd1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_rt"
            },
            "tags_all": {
              "Name": "tf_rt"
            },
            "vpc_id": "vpc-0f6d4c225868cf1c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:535228728975:security-group/sg-05bd8d00cf2960070",
            "description": "Created with Terraform. Allows ICMP, HTTP, HTTPS and SSH",
            "egress": [],
            "id": "sg-05bd8d00cf2960070",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-sg",
            "name_prefix": "",
            "owner_id": "535228728975",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f6d4c225868cf1c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:535228728975:subnet/subnet-0e67be145e2a5a4a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.100.0/24",
            "id": "subnet-0e67be145e2a5a4a7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535228728975",
            "tags": {
              "Name": "tf_psn"
            },
            "tags_all": {
              "Name": "tf_psn"
            },
            "vpc_id": "vpc-0f6d4c225868cf1c0"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:535228728975:vpc/vpc-0f6d4c225868cf1c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00bd455d205c44a7e",
            "default_route_table_id": "rtb-0eec1d7d9ec66b70b",
            "default_security_group_id": "sg-036ec01ad1ea41a19",
            "dhcp_options_id": "dopt-e9495981",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f6d4c225868cf1c0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eec1d7d9ec66b70b",
            "owner_id": "535228728975",
            "tags": {
              "Name": "tf_vpc"
            },
            "tags_all": {
              "Name": "tf_vpc"
            }
          }
        }
      ]
    }
  ]
}